# python-wrapper-demo

./: .gitignore  CMakeLists.txt  README.md
include/ais2203/: person.h  person.hpp
include/vecmath/: matrix4.hpp  vecmath.h  vector3.hpp
pycpp/: __init__.py  main.py  setup.py
src/: CMakeLists.txt
src/ais2203/: person.cpp  personc.cpp
src/vecmath/: matrix4.cpp  vecmath.cpp  vector3.cpp
